:construction: Define ícones da extensão

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,10 @@
 {
     "name": "Corona Cleaner",
-    "version": "0.1",
+    "version": "0.2.0",
     "description": "Cura para o Coronavírus na Internet",
+    "icons": {
+      "48": "images/icons8-coronavirus-48.png",
+      "96": "images/icons8-coronavirus-96.png"
+    },
     "manifest_version": 2
   }
